--- a/assets/css/templatemo-tale-seo-agency.css
+++ b/assets/css/templatemo-tale-seo-agency.css
@@ -1022,18 +1022,22 @@ Projects Style
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
   border-radius: 50%;
   position: absolute;
-  right: 30px;
+  left: 30px;
   top: 50%;
   color: #5b03e4;
   transform: translateY(-23px);
 }
 
+/**
+buttons slider
+*/
+
 .projects .owl-nav {
   position: absolute;
   max-width: 1320px;
-  top: -126px;
-  right: 16%;
-  text-align: right;
+  bottom: -15%;
+  left: 16%;
+  text-align: center;
 }
 
 .projects .owl-nav .owl-prev span,
